<resources>
    <string name="app_name">MyContacts</string>
    <string name="add_contact">Add New Contact</string>
    <string name="delete_button">X</string>
    <string name="full_name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_button">Save</string>
    <string name="title_activity_contact_maps">Map</string>
    <string name="email">Email</string>
</resources>
