<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="center">

        <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/default_contact"
        android:id="@+id/contact_profile_picture"
        android:layout_gravity="center"
        android:layout_weight="1"/>

        <EditText
            android:id="@+id/contact_first_name"
            android:hint="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:gravity="center" />

        <EditText
            android:id="@+id/contact_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            android:ems="10"
            android:gravity="center"/>

        <EditText
            android:id="@+id/contact_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:ems="10"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/contact_email"
            android:hint="@string/email"
            android:gravity="center" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:gravity="center"
            android:calendarViewShown="false" />

        <Button
            android:id="@+id/save_button"
            android:text="@string/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>