<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/contact_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@mipmap/default_contact"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:layout_weight="2.5">

            <TextView
                android:id="@+id/full_name_textView"
                android:text="@string/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/phone_number_textView"
                android:text="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

        </LinearLayout>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/location_pin"
            android:id="@+id/location_button"
            android:layout_weight="5"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <Button
        android:id="@+id/delete_button"
        android:text="@string/delete_button"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:background="@android:color/transparent" />
</RelativeLayout>
